--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/resultados.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/resultados.html
@@ -58,8 +58,7 @@
 							</h4>
 							<p class="card-text"><small class="text-muted"
 								th:text="'Unidad: '+ ${resultado[2]} +' ' + ${resultado[1]}"></small></p>
-								<p class="card-text"><small class="text-muted"
-									th:text="'Fecha: ' + ${resultado[3]}"></small></p>
+								<p class="card-text"><small class="text-muted" th:text="'Fecha: ' + ${#dates.format(resultado[3], 'dd/MM/yyyy')}"></small></p>
 								<a class="btn btn-primary" th:href="@{/asientos/}+ ${resultado[7]}">Reservar</a>
 						</div>
 					</div>
