--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/formCro.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/formCro.html
@@ -72,9 +72,10 @@
                                 </div>
                             </div>
 <div class="text-center p">
-                                <div th:if="${mensaje}" class="alert alert-danger" role="alert">
-                                    <span th:text="${mensaje}"></span>
-                                </div>
+                               <div class="alert alert-success" th:if="${success != null}" th:text="${success}"></div>
+    <div class="alert alert-danger" th:if="${error != null}" th:text="${error}"></div>
+    <div class="alert alert-warning" th:if="${warning != null}" th:text="${warning}"></div>
+    <div class="alert alert-info" th:if="${info != null}" th:text="${info}"></div>
                             </div>
                             <div class="m-3"></div>
 
