--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/layout/layout3.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/layout/layout3.html
@@ -41,6 +41,7 @@
             <ul>
                 <li><a class="nav-link scrollto" th:href="${'/personal/camera'}">Validación</a></li>
                 <li><a class="nav-link scrollto" th:href="${'/personal/boleto'}">Informes</a></li>
+                <li><a class="nav-link scrollto" th:href="${'/personal/descuentos'}">Descuentos</a></li>
                 <li><a class="nav-link scrollto" th:href="${'/personal/pagos'}">Pagos</a></li>
                
                 <li><a class="getstarted scrollto" th:href="@{/logout}">Cerrar Sesión</a></li>
