--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/listarreservas.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/listarreservas.html
@@ -14,7 +14,13 @@
 <!-- Añade Bootstrap JS (puedes cambiar la versión según tu necesidad) -->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-cMz3+XqJ02KD9ADh6+5ZP4d/bBl5LrZiHp0U9Lp43xgaoRkM1hpq2I0t0MhBEdDe" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8sh+WyIdb1UuI920TognTo6k9hj4DB1j7q1k5" crossorigin="anonymous"></script>
-
+<script th:inline="javascript">
+    function cancelarReserva() {
+        var boletoId = document.querySelector('[data-boleto-id]').getAttribute('data-boleto-id');
+        var url = '/reserva/no';
+        window.location.href = url + '/' + boletoId;
+    }
+</script>
 	<link rel="stylesheet" th:href="@{/Administrador/style2.css}" />
 		<section id="clients" class="clients section-bg">
 			<div class="container">
@@ -61,6 +67,7 @@
 
 			</div>
 		</section>
+		
 		<section id="services" class="services section-bg">
 			
 			<div class="container" data-aos="fade-up">
@@ -76,6 +83,12 @@
     </div>
  
 			</section>
+			<div class="alert alert-success" th:if="${success != null}" th:text="${success}"></div>
+    <div class="alert alert-danger" th:if="${error != null}" th:text="${error}"></div>
+    <div class="alert alert-warning" th:if="${warning != null}" th:text="${warning}"></div>
+    <div class="alert alert-info" th:if="${info != null}" th:text="${info}"></div>
+			<br>
+			<center><h2>REALIZADAS EN EFECTIVO : </h2></center>
 	<div class="container py-4">
 		<div class="card bg-light">
 			<div class="card-body">
@@ -90,8 +103,10 @@
 							<th class="bg-dark text-white">FECHA</th>
 							<th class="bg-dark text-white">HORA</th>
 							<th class="bg-dark text-white">MÉTODO DE PAGO</th>
+							<th class="bg-dark text-white">TOTAL PAGO</th>
+							<th class="bg-dark text-white">DESCUENTO</th>
 							<th class="bg-dark text-white">ESTADO</th>
-							<th class="bg-dark text-white">CANCELAR RESERVA</th>
+							<th class="bg-dark text-white">ACCIÓN</th>
 						</tr>
 					</thead>
 					<tbody>
@@ -99,15 +114,20 @@
 							<td th:text="${boleto.asiento.fila}+ ' - ' + ${boleto.asiento.columna}"></td>
 							<td th:text="${boleto.cronograma.ruta.rutaOrigen}+ ' - ' + ${boleto.cronograma.ruta.rutaDestino}"></td>
 							<td th:text="${boleto.cronograma.unidad.numero}+ ' - ' + ${boleto.cronograma.unidad.cooperativa.nombre}"></td>
-							<td th:text="${boleto.cronograma.fecha}"></td>
+							<td th:text="${boleto.cronograma.fecha.dayOfMonth}+'/'+${boleto.cronograma.fecha.monthValue}+'/'+${boleto.cronograma.fecha.year}"></td>
 							<td th:text="${boleto.cronograma.horaSalida}"></td>
 							<td th:text="${boleto.metodoPago}"></td>
+							<td th:text="${boleto.totalPagoFormateado}" class="text-center"></td>
+							<td th:text="${boleto.descuento}"></td>
 					        <td th:text="${boleto.estado}"></td>
 							
-							<td>
-								<a class="btn btn-danger"
-								th:href="@{/cancelar/boleto/}+ ${boleto.id}+ '/'+ ${boleto.asiento.id}">CANCELAR RESERVACIÓN</a>
-								</td>
+				<td>
+    <button class="btn btn-danger"
+            th:disabled="${boleto.estado.toLowerCase() == 'pagado'}"
+            th:attr="data-boleto-id=${boleto.id}"
+            onclick="cancelarReserva()">CANCELAR RESERVACIÓN</button>
+</td>
+
 							
 						</tr>
 					</tbody>
@@ -116,7 +136,48 @@
 		</div>
 	</div>
 	 
+<center><h2>REALIZADAS CON TARJETA : </h2></center>
+<div class="container py-4">
+		<div class="card bg-light">
+			<div class="card-body">
 
+		
+				<table class="table table-striped table-bordered">
+					<thead class="thead-inverse">
+						<tr>
+							<th class="bg-dark text-white">ASIENTO</th>
+							<th class="bg-dark text-white">RUTA</th>
+							<th class="bg-dark text-white">UNIDAD</th>
+							<th class="bg-dark text-white">FECHA</th>
+							<th class="bg-dark text-white">HORA</th>
+							<th class="bg-dark text-white">MÉTODO DE PAGO</th>
+							<th class="bg-dark text-white">TOTAL PAGO</th>
+							<th class="bg-dark text-white">DESCUENTO</th>
+							<th class="bg-dark text-white">ESTADO</th>
+							
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:each="boleto2: ${boletos2}">
+							<td th:text="${boleto2.asiento.fila}+ ' - ' + ${boleto2.asiento.columna}"></td>
+							<td th:text="${boleto2.cronograma.ruta.rutaOrigen}+ ' - ' + ${boleto2.cronograma.ruta.rutaDestino}"></td>
+							<td th:text="${boleto2.cronograma.unidad.numero}+ ' - ' + ${boleto2.cronograma.unidad.cooperativa.nombre}"></td>
+							<td th:text="${boleto2.cronograma.fecha.dayOfMonth}+'/'+${boleto2.cronograma.fecha.monthValue}+'/'+${boleto2.cronograma.fecha.year}"></td>
+							<td th:text="${boleto2.cronograma.horaSalida}"></td>
+							<td th:text="${boleto2.metodoPago}"></td>
+							<td th:text="${boleto2.totalPagoFormateado}" class="text-center"></td>
+							<td th:text="${boleto2.descuento}"></td>
+					        <td th:text="${boleto2.estado}"></td>
+							
+							
+							
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+	</div>
+	 
 
 	<footer th:replace="layout/layout2 :: footer"></footer>
 	<link rel="stylesheet" th:href="@{/css/pasajero/listarboleto.css}" />
