--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/forgot_password_form.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/forgot_password_form.html
@@ -125,9 +125,15 @@ input-gray {
                th:disabled="${message == 'Te hemos enviado un mensaje a tu correo por favor verifícalo.'}"
                th:classappend="${message == 'Te hemos enviado un mensaje a tu correo por favor verifícalo.'} ? 'input-gray' : ''">
     </div>
+<div id="loadingContainer" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center; background-color: rgba(255, 255, 255, 0.8); padding: 20px; border-radius: 10px;">
+    <p id="loadingText" style="color: black;">Enviando correo, por favor espera...</p>
+    <div class="spinner-border text-primary" role="status">
+        <span class="visually-hidden">Cargando...</span>
+    </div>
+</div>
 
     <div class="mb-3">
-        <input type="submit" value="Enviar" class="btn btn-primary btn-block"
+        <input type="submit" onclick="showLoading()" value="Enviar" class="btn btn-primary btn-block"
                th:disabled="${message == 'Te hemos enviado un mensaje a tu correo por favor verifícalo.'}"
                th:classappend="${message == 'Te hemos enviado un mensaje a tu correo por favor verifícalo.'} ? 'btn-gray' : ''">
         <a class="btn btn-danger" th:href="@{/login}" role="button">Cancelar</a>
@@ -154,6 +160,22 @@ input-gray {
 				online</p>
 	
 		</footer>
+		
+		<script>
+  
+		function showLoading() {
+		    var loadingDiv = document.getElementById('loadingContainer');
+		    var loadingText = document.getElementById('loadingText');
+		    loadingText.innerHTML = 'Enviando correo, por favor espera...';
+		    loadingDiv.style.display = 'block';
+		}
+
+		function hideLoading() {
+		    var loadingDiv = document.getElementById('loadingContainer');
+		    loadingDiv.style.display = 'none';
+		}
+    
+</script>
 </body>
 </html>
 
