--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/reset_password_form.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/reset_password_form.html
@@ -6,7 +6,20 @@
     <title>Reset Your Password</title>
     <!-- Add Bootstrap CSS link here -->
   <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css}" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    
+
+
+<!-- Link CSS -->
+<link rel="stylesheet" th:href="@{/css/style.css}">
+    <!-- Botpress Webchat Scripts -->
+<!-- Link Bootstrap Icons -->
+<link rel="stylesheet" th:href="@{https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css}" integrity="sha512-ZnR2wlLbSbr8/c9AgLg3jQPAattCUImNsae6NHYnS9KrIwRdcY9DxFotXhNAKIKbAXlRnujIqUWoXXwqyFOeIQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+<!-- Link Bootstrap CSS -->
+<link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css}" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+<!-- Link CSS -->
+<link rel="stylesheet" th:href="@{/css/style.css}">
+    <script src="https://kit.fontawesome.com/827cd1c55c.js" crossorigin="anonymous"></script> 
   <style>
         body {
             display: flex;
@@ -78,6 +91,48 @@
     text-align: center;
     z-index: 1000;
 }
+.form-container input.invalid-password {
+   border-color: #dc3545; /* Cambia el color del borde a rojo para indicar un campo no válido */
+   color: #dc3545; /* Cambia el color del texto a rojo para indicar un campo no válido */
+}
+ .password-toggle {
+        position: relative;
+    }
+
+    .toggle-icon {
+        position: absolute;
+        top: 50%;
+        right: 10px;
+        transform: translateY(-50%);
+        cursor: pointer;
+    }
+ .icon-input {
+        position: relative;
+        display: flex;
+        align-items: center;
+    }
+
+    .icon-input i {
+        position: absolute;
+        left: 10px; /* Ajusta la posición según sea necesario */
+    }
+
+    .icon-input input {
+        padding-left: 30px; /* Ajusta el espacio para el icono */
+    }
+    .btn-custom {
+    background-color: #37517e;
+    border-color: #37517e;
+    transition: background-color 0.3s;
+  }
+
+  .btn-custom:hover {
+    background-color: #2b425b;
+    border-color: #2b425b;
+  }
+  .toggle-icon {
+    color: black; /* Agrega esta línea para establecer el color del icono */
+}
          </style>
 </head>
 <body>
@@ -94,17 +149,39 @@
         </div>
 
         <input type="hidden" name="token" th:value="${token}" />
-        <div class="mb-3">
-            <input type="password" name="password" id="password" class="form-control"
-                placeholder="Ingrese su nueva contraseña" required autofocus />
-        </div>
-        <div class="mb-3">
-            <input type="password" class="form-control" placeholder="Confirme su nueva contraseña"
-                required oninput="checkPasswordMatch(this);" />
-        </div>
-        <div class="text-center mb-3">
-            <button type="submit" class="btn btn-primary btn-block">Cambiar mi contraseña</button>
-        </div>
+      <div class="type password-toggle">
+    <div class="password-toggle">
+        <input class="form-control" type="password" placeholder="Contraseña" name="password" id="password" onkeyup="checkPassword(this)" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[_!@#$%^&*])[A-Za-z\d_!@#$%^&*]{8,}" />
+       <i class="toggle-icon fas fa-eye" id="eyeIconOpen" onclick="togglePasswordVisibility('password', 'eyeIconOpen', 'eyeIconClose')"></i>
+        <i class="toggle-icon fas fa-eye-slash" id="eyeIconClose" style="display:none;" onclick="togglePasswordVisibility('password', 'eyeIconOpen', 'eyeIconClose')"></i>
+    </div>
+</div><br>
+       <div class="type password-toggle">
+    <div class="password-toggle">
+    <input type="password" class="form-control" placeholder="Confirme su nueva contraseña"
+        required oninput="checkPasswordMatch(this);" id="confirmPassword" />
+   
+        <i class="toggle-icon fas fa-eye" id="eyeIconOpen" onclick="togglePasswordVisibility('confirmPassword', 'eyeIconOpen', 'eyeIconClose')"></i>
+        <i class="toggle-icon fas fa-eye-slash" id="eyeIconClose" style="display:none;" onclick="togglePasswordVisibility('confirmPassword', 'eyeIconOpen', 'eyeIconClose')"></i>
+    <div id="match-message" style="color: #dc3545;"></div>
+</div>
+</div><br>
+         <div class="validation">
+        <ul>
+            <li id="lower">Al menos un carácter en minúscula</li>
+            <li id="upper">Al menos un carácter en mayúscula</li>
+            <li id="number">Al menos un numero</li>
+            <li id="special">Al menos un carácter especial</li>
+            <li id="length">Al menos 8 caracteres</li>
+        </ul>
+    </div> <br>
+
+<div class="text-center mb-3">
+    <button type="submit" class="btn btn-primary btn-block btn-custom">Cambiar mi contraseña</button>
+</div>
+
+
+
     </form>
 </div>
 
@@ -120,14 +197,71 @@
         crossorigin="anonymous"></script>
 
 <script>
-    function checkPasswordMatch(fieldConfirmPassword) {
-        if (fieldConfirmPassword.value !== $("#password").val()) {
-            fieldConfirmPassword.setCustomValidity("Passwords do not match!");
+//Modifica la función checkPasswordMatch para mostrar el mensaje solo cuando el campo de confirmar contraseña está enfocado
+function checkPasswordMatch(confirmPasswordInput) {
+    var password = document.getElementById('password').value;
+    var confirmPassword = confirmPasswordInput.value;
+    var matchMessage = document.getElementById('match-message');
+
+    if (confirmPasswordInput === document.activeElement) {
+        if (password === confirmPassword) {
+            matchMessage.textContent = '';
         } else {
-            fieldConfirmPassword.setCustomValidity("");
+            matchMessage.textContent = 'Las contraseñas deben coincidir';
         }
     }
+}
+
+document.getElementById('confirmPassword').addEventListener('focus', function() {
+    checkPasswordMatch(this);
+});
+
+function checkPassword(passwordInput) {
+    var password = passwordInput.value;
+    var lowercaseRegex = /[a-z]/;
+    var uppercaseRegex = /[A-Z]/;
+    var numberRegex = /\d/;
+    var specialCharRegex = /[_!@#$%^&*]/;
+    var lengthRegex = /.{8,}/;
+
+    document.getElementById('lower').classList.toggle('valid', lowercaseRegex.test(password));
+    document.getElementById('upper').classList.toggle('valid', uppercaseRegex.test(password));
+    document.getElementById('number').classList.toggle('valid', numberRegex.test(password));
+    document.getElementById('special').classList.toggle('valid', specialCharRegex.test(password));
+    document.getElementById('length').classList.toggle('valid', lengthRegex.test(password));
+
+    var isValid = lowercaseRegex.test(password) &&
+                  uppercaseRegex.test(password) &&
+                  numberRegex.test(password) &&
+                  specialCharRegex.test(password) &&
+                  lengthRegex.test(password);
+
+    // Actualizar el estilo del campo de contraseña
+    passwordInput.classList.toggle('invalid-password', !isValid);
+    passwordInput.classList.toggle('invalid-text', !isValid);
+
+    var confirmPasswordInput = document.getElementById('confirmPassword');
+    checkPasswordMatch(confirmPasswordInput);
+}
+
+
+function togglePasswordVisibility(passwordInputId, eyeIconOpenId, eyeIconCloseId) {
+    var passwordInput = document.getElementById(passwordInputId);
+    var eyeIconOpen = document.getElementById(eyeIconOpenId);
+    var eyeIconClose = document.getElementById(eyeIconCloseId);
+
+    if (passwordInput.type === 'password') {
+        passwordInput.type = 'text';
+        eyeIconOpen.style.display = 'none';
+        eyeIconClose.style.display = 'inline';
+    } else {
+        passwordInput.type = 'password';
+        eyeIconOpen.style.display = 'inline';
+        eyeIconClose.style.display = 'none';
+    }
+   }
 </script>
+
  <footer  >
 	  
 		
