--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/formRuta.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/formRuta.html
@@ -42,7 +42,7 @@
                             <div class="form-group row">
                                 <label class="col-form-label col-sm-4">Costo Ruta</label>
                                 <div class="col-sm-8">
-                                    <input type="number" step="0.01" th:field="*{costoRuta}" class="form-control" required>
+                                    <input type="number" step="0.01" th:field="*{costoRuta}" class="form-control" required min="1.5" max="20.00">
                                 </div>
                             </div>
                             <div class="m-3"></div>
