--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/listarUnidad.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/listarUnidad.html
@@ -104,10 +104,9 @@
 										<a class="btn btn-secondary btn-xs mx-1"
 										th:href="@{/unidad/form/{id}(id=${unidad.id})}"> <!-- Corregido aquí -->
 											<i class="bi bi-pencil-square"></i>
-									</a> <a class="btn btn-danger btn-xs mx-1"
-										th:href="@{/unidad/eliminar/{id}(id=${unidad.id})}"> <!-- Corregido aquí -->
-											<i class="bi bi-trash-fill"></i>
-									</a>
+									</a> <a class="btn btn-danger btn-xs mx-1" th:href="@{/unidad/eliminar/{id}(id=${unidad.id})}">
+    <i class="bi bi-trash-fill"></i>
+</a>
 									</td>
 								</tr>
 							</tbody>
