--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/formUnidadEdi.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/formUnidadEdi.html
@@ -70,7 +70,15 @@
 
                             <div class="m-3"></div>
 
-                         
+                          <div class="form-group row">
+                                <label class="col-form-label col-sm-4">Estado de la unidad</label>
+                                <div class="col-sm-8">
+                                    <select th:field="*{estadoActividad}" class="form-control">
+                                        <option th:value="ACTIVO" th:text="Activo">Activo</option>
+                                        <option th:value="INACTIVO" th:text="Inactivo">Inactivo</option>
+                                    </select>
+                                </div>
+                            </div>
 
                             <div class="text-center p">
                                 <!-- Mensaje de error -->
